--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 actix-web = { version = "3", features = ["openssl"] }
 env_logger = "0.7"
-openssl = "0.10"
+openssl = { version = "0.10", features = ["v110"] }
