--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ edition = "2018"
 actix-web = { version = "3", features = ["openssl"] }
 env_logger = "0.7"
 openssl = { version = "0.10", features = ["v110"] }
+futures = "0.3.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+json = "0.12"
